tests/golden/invalid/missing-package-decl.rego.stderr
fregot (fatal parse error):
  "missing-package-decl.rego" (line 1, column 1):
  parse failed:

    1| default allow = false
       ^

  unexpected keyword 'default'
  expecting 'package' declaration
